# docs_playground

./: README.md  mkdocs.yml  pyproject.toml
docs/en/: index.md
docs/en/tutorial/: first_steps.md
docs/ru/: index.md
docs/ru/tutorial/: first_steps.md
docs/stylesheets/: extra.css
