[tool.poetry]
name = "docs-playground"
version = "0.1.0"
description = ""
authors = ["eyenazar <eyenazar3@gmail.com>"]
readme = "README.md"
packages = [{include = "docs_playground"}]

[tool.poetry.dependencies]
python = "^3.10"
mkdocs = "^1.4.2"
mkdocs-material = "^8.5.11"
mkdocs-static-i18n = "^0.53"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
